--- a/blazor.render/Client/blazor.render.Client.csproj
+++ b/blazor.render/Client/blazor.render.Client.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.12" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="table.lib" Version="1.8.2" />
   </ItemGroup>
 
   <ItemGroup>
